WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283768
SVGToOTFFontConversion.cpp:169:29: error: use of overloaded operator '[]' is ambiguous (with operand types 'ASCIILiteral' and 'int')
https://bugs.webkit.org/show_bug.cgi?id=283768
Summary
SVGToOTFFontConversion.cpp:169:29: error: use of overloaded operator '[]' is ...
Michael Catanzaro
Reported
2024-11-27 11:24:43 PST
WebKitGTK 2.47.2 does not build on i686: In file included from /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/redhat-linux-build/webkitgtk-6.0/WebCore/DerivedSources/unified-sources/UnifiedSource-8feba646-15.cpp:6: /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/Source/WebCore/svg/SVGToOTFFontConversion.cpp:169:29: error: use of overloaded operator '[]' is ambiguous (with operand types 'ASCIILiteral' and 'int') 169 | m_result.append(code[0]); | ~~~~^~ /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/redhat-linux-build/webkitgtk-6.0/WTF/Headers/wtf/text/ASCIILiteral.h:76:20: note: candidate function 76 | constexpr char operator[](size_t index) const { return m_charactersWithNullTerminator[index]; } | ^ /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/Source/WebCore/svg/SVGToOTFFontConversion.cpp:169:29: note: built-in candidate operator[](const char *, int) 169 | m_result.append(code[0]); | ^ /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/Source/WebCore/svg/SVGToOTFFontConversion.cpp:169:29: note: built-in candidate operator[](const volatile char *, int) /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/Source/WebCore/svg/SVGToOTFFontConversion.cpp:170:29: error: use of overloaded operator '[]' is ambiguous (with operand types 'ASCIILiteral' and 'int') 170 | m_result.append(code[1]); | ~~~~^~ /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/redhat-linux-build/webkitgtk-6.0/WTF/Headers/wtf/text/ASCIILiteral.h:76:20: note: candidate function 76 | constexpr char operator[](size_t index) const { return m_charactersWithNullTerminator[index]; } | ^ /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/Source/WebCore/svg/SVGToOTFFontConversion.cpp:170:29: note: built-in candidate operator[](const char *, int) 170 | m_result.append(code[1]); | ^ /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/Source/WebCore/svg/SVGToOTFFontConversion.cpp:170:29: note: built-in candidate operator[](const volatile char *, int) /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/Source/WebCore/svg/SVGToOTFFontConversion.cpp:171:29: error: use of overloaded operator '[]' is ambiguous (with operand types 'ASCIILiteral' and 'int') 171 | m_result.append(code[2]); | ~~~~^~ /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/redhat-linux-build/webkitgtk-6.0/WTF/Headers/wtf/text/ASCIILiteral.h:76:20: note: candidate function 76 | constexpr char operator[](size_t index) const { return m_charactersWithNullTerminator[index]; } | ^ /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/Source/WebCore/svg/SVGToOTFFontConversion.cpp:171:29: note: built-in candidate operator[](const char *, int) 171 | m_result.append(code[2]); | ^ /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/Source/WebCore/svg/SVGToOTFFontConversion.cpp:171:29: note: built-in candidate operator[](const volatile char *, int) /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/Source/WebCore/svg/SVGToOTFFontConversion.cpp:172:29: error: use of overloaded operator '[]' is ambiguous (with operand types 'ASCIILiteral' and 'int') 172 | m_result.append(code[3]); | ~~~~^~ /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/redhat-linux-build/webkitgtk-6.0/WTF/Headers/wtf/text/ASCIILiteral.h:76:20: note: candidate function 76 | constexpr char operator[](size_t index) const { return m_charactersWithNullTerminator[index]; } | ^ /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/Source/WebCore/svg/SVGToOTFFontConversion.cpp:172:29: note: built-in candidate operator[](const char *, int) 172 | m_result.append(code[3]); | ^ /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/Source/WebCore/svg/SVGToOTFFontConversion.cpp:172:29: note: built-in candidate operator[](const volatile char *, int) /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/Source/WebCore/svg/SVGToOTFFontConversion.cpp:1508:48: error: use of overloaded operator '[]' is ambiguous (with operand types 'ASCIILiteral' and 'int') 1508 | m_result[directoryEntryOffset] = identifier[0]; | ~~~~~~~~~~^~ /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/redhat-linux-build/webkitgtk-6.0/WTF/Headers/wtf/text/ASCIILiteral.h:76:20: note: candidate function 76 | constexpr char operator[](size_t index) const { return m_charactersWithNullTerminator[index]; } | ^ /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/Source/WebCore/svg/SVGToOTFFontConversion.cpp:1508:48: note: built-in candidate operator[](const char *, int) 1508 | m_result[directoryEntryOffset] = identifier[0]; | ^ /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/Source/WebCore/svg/SVGToOTFFontConversion.cpp:1508:48: note: built-in candidate operator[](const volatile char *, int) /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/Source/WebCore/svg/SVGToOTFFontConversion.cpp:1509:52: error: use of overloaded operator '[]' is ambiguous (with operand types 'ASCIILiteral' and 'int') 1509 | m_result[directoryEntryOffset + 1] = identifier[1]; | ~~~~~~~~~~^~ /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/redhat-linux-build/webkitgtk-6.0/WTF/Headers/wtf/text/ASCIILiteral.h:76:20: note: candidate function 76 | constexpr char operator[](size_t index) const { return m_charactersWithNullTerminator[index]; } | ^ /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/Source/WebCore/svg/SVGToOTFFontConversion.cpp:1509:52: note: built-in candidate operator[](const char *, int) 1509 | m_result[directoryEntryOffset + 1] = identifier[1]; | ^ /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/Source/WebCore/svg/SVGToOTFFontConversion.cpp:1509:52: note: built-in candidate operator[](const volatile char *, int) /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/Source/WebCore/svg/SVGToOTFFontConversion.cpp:1510:52: error: use of overloaded operator '[]' is ambiguous (with operand types 'ASCIILiteral' and 'int') 1510 | m_result[directoryEntryOffset + 2] = identifier[2]; | ~~~~~~~~~~^~ /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/redhat-linux-build/webkitgtk-6.0/WTF/Headers/wtf/text/ASCIILiteral.h:76:20: note: candidate function 76 | constexpr char operator[](size_t index) const { return m_charactersWithNullTerminator[index]; } | ^ /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/Source/WebCore/svg/SVGToOTFFontConversion.cpp:1510:52: note: built-in candidate operator[](const char *, int) 1510 | m_result[directoryEntryOffset + 2] = identifier[2]; | ^ /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/Source/WebCore/svg/SVGToOTFFontConversion.cpp:1510:52: note: built-in candidate operator[](const volatile char *, int) /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/Source/WebCore/svg/SVGToOTFFontConversion.cpp:1511:52: error: use of overloaded operator '[]' is ambiguous (with operand types 'ASCIILiteral' and 'int') 1511 | m_result[directoryEntryOffset + 3] = identifier[3]; | ~~~~~~~~~~^~ /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/redhat-linux-build/webkitgtk-6.0/WTF/Headers/wtf/text/ASCIILiteral.h:76:20: note: candidate function 76 | constexpr char operator[](size_t index) const { return m_charactersWithNullTerminator[index]; } | ^ /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/Source/WebCore/svg/SVGToOTFFontConversion.cpp:1511:52: note: built-in candidate operator[](const char *, int) 1511 | m_result[directoryEntryOffset + 3] = identifier[3]; | ^ /builddir/build/BUILD/webkitgtk-2.47.2-build/webkitgtk-2.47.2/Source/WebCore/svg/SVGToOTFFontConversion.cpp:1511:52: note: built-in candidate operator[](const volatile char *, int) 8 errors generated.
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2024-11-27 15:56:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37207
Alberto Garcia
Comment 2
2024-11-28 03:18:28 PST
Also in armel / armhf. FWIW this problem seems to happen only with clang, the gcc build works fine.
EWS
Comment 3
2024-12-03 10:45:58 PST
Committed
287287@main
(0b149ed6d30f): <
https://commits.webkit.org/287287@main
> Reviewed commits have been landed. Closing PR #37207 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2024-12-03 10:46:14 PST
<
rdar://problem/140862187
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug